--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,29 @@
 Flask==3.0.2
+Werkzeug==3.0.2
+
 SQLAlchemy==2.0.29
 Flask-SQLAlchemy==3.1.1
 Flask-Migrate==4.0.5
 alembic==1.13.1
 pyodbc==5.2.0
+
 bcrypt==4.1.2
 python-dotenv==1.0.1
-flasgger===0.9.7b2
+
 marshmallow>=3.20.1
-pytest
-pytest-flask
-pytest-cov
+marshmallow-sqlalchemy==1.0.0
+
+flasgger===0.9.7b2
+flask-swagger-ui>=3.36.0
+flask-cors==4.0.0
+
+pytest>=8.2.2
+pytest-flask==1.2.0
+pytest-cov==5.0.0
+coverage==7.3.1
+requests==2.32.3
+
+selenium==4.23.1
+webdriver-manager==4.0.2
+
 
