--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,11 @@ services:
     ports:
       - "5000:5000"
     environment:
+      - FLASK_APP=manage.py
       - FLASK_ENV=development
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/sushi_db
+      - DB_HOST=db
+      - DB_PORT=5432
+      - DB_NAME=sushi_db
     depends_on:
       - db
     volumes:
