--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==3.0.2
 Werkzeug==3.0.2
 
-SQLAlchemy==2.0.29
+SQLAlchemy>=2.0.36
 Flask-SQLAlchemy==3.1.1
 Flask-Migrate==4.0.5
 alembic==1.13.1
